--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "a-frame-in-100-lines",
-  "version": "0.2.5",
+  "name": "framesjs-starter",
+  "version": "0.1.6",
+  "private": true,
   "scripts": {
-    "build": "rm -rf .next && next build",
-    "dev": "PORT=4000 next dev",
-    "format": "prettier --log-level warn --write .",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "https://twitter.com/cedricwaxwing",
-  "license": "MIT",
   "dependencies": {
-    "@coinbase/onchainkit": "0.5.1",
-    "@react-three/drei": "^9.97.3",
-    "@react-three/fiber": "^8.15.16",
-    "next": "13.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.161.0",
-    "viem": "^2.7.1"
+    "@noble/ed25519": "^2.0.0",
+    "frames.js": "^0.4.0",
+    "next": "14.1.0",
+    "qrcode.react": "^3.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "satori": "^0.10.13",
+    "swr": "^2.2.4"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.8",
-    "@types/react": "18.2.48",
-    "prettier": "^3.2.4",
-    "typescript": "^5.3.3"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
